<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_choose_cal_event"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="184dp"
        android:hint="@string/choose_event" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:drawableRight="@drawable/ic_action_forward_dark"
        android:onClick="showNextView"
        android:text="@string/button_next" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:drawableLeft="@drawable/ic_action_remove_dark"
        android:onClick="showCancelView"
        android:text="@string/cancel" />

</RelativeLayout>
